test/Fail/Issue8126.err
Issue8126.agda:17.35-36: error: [UnequalTerms]
The terms
  b
and
  a
are not equal at type A
when checking that the expression y has type P a
